--- a/two.html
+++ b/two.html
@@ -20,8 +20,8 @@
 		<link href="./LayX/layx.min.css" rel="stylesheet" type="text/css" />
 		<script src="./LayX/layx.min.js" type="text/javascript"></script>
 		
-		<link href="./BubbleHoverButton/BubbleHoverButton.css" rel="stylesheet" type="text/css" />
-		<script src="./BubbleHoverButton/BubbleHoverButton.js" type="text/javascript"></script>
+		<link href="./css/BubbleHoverButton/BubbleHoverButton.css" rel="stylesheet" type="text/css" />
+		<script src="./css/BubbleHoverButton/BubbleHoverButton.js" type="text/javascript"></script>
 		
 		<script src="./js/vconsole.min.js" type="text/javascript"></script>
 		<script type="text/javascript">
@@ -66,12 +66,20 @@ h1{
 	position: absolute;
 	top: 6px;
 }
-.button-box > .button_su{
-	/* height: 36px; */
-	color: white;
-	background-color: #6a8;
-	/*border-radius:40px;*/
-	line-height: 0px/* 20px */;
+.button_su{
+	height: 36px;
+	min-width: 50px;
+	
+	margin-bottom: 0px;
+	border-radius: 10px;
+	margin-top: 0px;
+}
+.button_su_inner{
+	height: 36px;
+	min-width: 50px;
+	
+	padding: 0px;
+	font-size: auto;
 }
 </style>
 	</head>
