--- a/one2.html
+++ b/one2.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes" name="viewport" />
-		<title>五子棋-人机对战</title>
+		<title>五子棋-人机对战-简单</title>
 		
 		<link href="./css/kt-title.css" rel="stylesheet" type="text/css" />
 		<link href="./css/title.css" rel="stylesheet" type="text/css" />
@@ -20,8 +20,8 @@
 		<link href="./LayX/layx.min.css" rel="stylesheet" type="text/css" />
 		<script src="./LayX/layx.min.js" type="text/javascript"></script>
 		
-		<link href="./BubbleHoverButton/BubbleHoverButton.css" rel="stylesheet" type="text/css" />
-		<script src="./BubbleHoverButton/BubbleHoverButton.js" type="text/javascript"></script>
+		<link href="./css/BubbleHoverButton/BubbleHoverButton.css" rel="stylesheet" type="text/css" />
+		<script src="./css/BubbleHoverButton/BubbleHoverButton.js" type="text/javascript"></script>
 		
 		<script src="./js/vconsole.min.js" type="text/javascript"></script>
 		<script type="text/javascript">
@@ -46,17 +46,26 @@ h1{
 	font-size: 45px;
 	margin-top: 45px;
 }
+
 .button-box{
 	position: absolute;
 	top: 6px;
 }
-.button-box > .button_su{
-	/* height: 36px; */
-	color: white;
-	background-color: #6a8;
-	/*border-radius:40px;*/
-	line-height: 0px/* 20px */;
+.button_su{
+	height: 36px;
+	min-width: 50px;
+	
+	margin-bottom: 0px;
+	border-radius: 10px;
 }
+.button_su_inner{
+	height: 36px;
+	min-width: 50px;
+	
+	padding: 0px;
+	font-size: auto;
+}
+
 #win{
 	border:1px solid black;
 	position:absolute;
@@ -115,7 +124,7 @@ noscript{
 			<button onclick="clear_data();">清除胜率数据</button> -->
 		</div>
 		
-		<h1 id="h1" class="title kt">五子棋-人机对战（中级）</h1>
+		<h1 id="h1" class="title kt">五子棋-人机对战-中级</h1>
 		<br/><b id="message" style="position:absolute;top:200px;" class="fzybxskt">下棋方：黑棋</b>
 		<br/><b id="message2" style="position:absolute;top:220px;" class="fzybxskt"></b>
 		<b id="win">
