--- a/rooms.html
+++ b/rooms.html
@@ -284,7 +284,7 @@
 			<p class="state connecting">连接服务器中……</p>
 			<label>成员：</label>
 			<ul id="players">加载中……</ul>
-			<label>选择先手/后手：</label>
+			<label>先手/后手：</label>
 			<div class="layui-btn-group">
 				<button class="random layui-btn layui-btn-normal">随机</button>
 				<button class="first layui-btn layui-btn-primary layui-border-green">先手</button>
@@ -368,7 +368,7 @@ let socket, //socket.io
 	ROOM = null, //加入的房间
 	startRoomLoader; //开始游戏等待
 if (typeof io == "undefined"){ //未加载socket.io.js
-	$(".state").html("网络错误，请检查网络连接！")
+	$(".state").html("网络错误，请检查网络连接再刷新页面！")
 		.removeClass().addClass("state failed");
 	
 }else{
